# fast-ecommerce-back

./: .gitignore  .pyup.yml  .safety-project.ini  CHANGELOG.md  Dockerfile  Makefile  Procfile  README.md  \  alembic.ini  app.json  config.py  conftest.py  constants.py  docker-compose.yml  erros.txt  main.py  mmain.py  nixpacks.toml  poetry.toml  pyproject.toml  requirements.txt  settings.toml  sonar-project.properties  test.py  test_output.txt  test_results.txt  test_results_final.txt
.github/workflows/: continous-integration.yml  docker-image.yml  fastecommerce-api.yml
True/: .buildNodeID  .token_seed
app/: alembic.ini  config.py  conftest.py  constants.py  main.py  pytest.ini  settings.toml  settings.toml.old  test.sh  worker.py
app/bling/: entities.py  filename.xml  services.py
app/campaign/: repository.py
app/cart/: repository.py  retry.py  services.py  tasks.py  uow.py
app/catalog/: entities.py  repository.py  services.py  uow.py
app/contrib/: secrets_sample.toml
app/coupons/: repository.py
app/crowdfunding/: __init__.py  repository.py  services.py
app/domains/: domain_mail.py  domain_order.py  domain_payment.py  domain_shipping.py  domain_user.py
app/email-templates/: mail_form_courses.html  mail_tracking_number.html
app/endpoints/: deps.py
app/entities/: address.py  cart.py  catalog.py  category.py  coupon.py  crowdfunding.py  freight.py  mail.py  order.py  payment.py  product.py  report.py  settings.py  user.py
app/ext/: base.py  base_class.py  config.py  database.py  optimize_image.py  spaces.py
app/freight/: entities.py  freight_gateway.py
app/gateway/: payment_gateway.py
app/infra/: base.py  base_class.py  bootstrap.py  config.py  constants.py  cors.py  crypto_tools.py  custom_decorators.py  database.py  deps.py  error_handlers.py  logging.py  metrics.py  models.py  optimize_image.py  queue.py  recaptcha.py  redis.py  scheduler.py  scheduler_order.py  spaces.py  stripe.py  sync_session.py  worker.py
app/inventory/: repository.py  tasks.py  uow.py
app/job_service/: __init__.py  service.py  service_status.py
app/mail/: services.py  tasks.py
app/migrations/: env.py
app/models/: __init__.py  commissions.py  franchise.py  order.py  role.py  transaction.py  uploadedimage.py  users.py
app/order/: entities.py  repository.py  services.py  tasks.py  uow.py
app/payment/: adapter.py  endpoint.py  entities.py  gateway.py  models.py  payment_process_cielo.py  payment_process_mercado_pago.py  payment_process_stripe.py  repositories.py  repository.py  schema.py  service.py  services.py  tasks.py  uow.py
app/product/: repository.py  services.py
app/report/: entities.py  repository.py  services.py  tasks.py
app/schemas/: mail_schema.py  order_schema.py  payment_schema.py  shipping_schema.py  user_schema.py
app/settings/: repository.py
app/tests/: test_payment.py  test_user.py
app/user/: gateway.py  repository.py  services.py  uow.py
app/zipcode/: adapter.py  zip_code.py
catalog/: __init__.py
changelog.d/: +1fc6835a.chore.md  +246720a2.added.md  +2b02ae1e.build.md  +31f1547f.build.md  +323873ec.changed.md  +3552b64b.changed.md  +5b613df1.fixed.md  +6e48f558.fixed.md  +79d9ab90.added.md  +831309a3.changed.md  +984a4af4.added.md  +9d1e4383.fixed.md  +a1f29d28.added.md  +abd01d17.chore.md  +b68229fb.added.md  +e5280c68.chore.md  +f008d20f.fixed.md  +f216fb89.build.md  1177.build.md  1178.added.md  1180.added.md
contrib/: secrets_sample.toml
domains/: domain_mail.py  domain_order.py  domain_payment.py  domain_shipping.py  domain_user.py
domains/tests/: test_domain_mail.py  test_domain_payment.py  test_user_domain.py
email-templates/: mail_form_courses.html  mail_inform_user_product.html  mail_order_cancelled.html  mail_order_paid.html  mail_order_processed.html  mail_reset_password.html  mail_tracking_number.html
endpoints/: deps.py
endpoints/v1/: default.py  direct_sales.py  mail.py  order.py  payment.py  product.py  shipping.py  users.py
ext/: base.py  database.py  optimize_image.py
frontend/: README.md  package.json
gateway/: payment_gateway.py
gateway/tests/: test_gateway.py
httpie_tests/: example.sh
hurl_tests/: QUICK_START.md  README.md  cielo.hurl  cieloenv  crowdfunding_contribute.sh  crowdfunding_contribute_pix.sh  crowdfunding_contribute_stripe.sh  crowdfunding_create_project.sh  crowdfunding_create_project_with_tiers.sh  crowdfunding_full_test.sh  ecommerce_checkout_credit_card.sh  ecommerce_checkout_pix.sh  example.sh  test.hurl
job_service/: service.py  service_status.py
job_service/tests/: test_service.py
job_v2/repositories/: orm_status.py
job_v2/service/: status.py
legacy/: domain_user.py
migrations/: env.py
migrations/versions/: 0258cb1bef06_add_customer_table.py  02e172ffd5ff_add_sku.py  0b293b9fe558_refactor_settings_table.py  0df9bdfb7ade_add_column_menu_and_showcase_in_category.py  0e757a8d3e82_create_tables.py  19215b4a119d_add_column_customer_id_and_user_id_in_.py  1dba810f2de3_add_cancelled_status_in_sales_commission.py  1e7bc63d3fb7_fix_image_gallery_autoincrement.py  1ea95b343cde_add_field_credentials_to_str.py  227ee7edf01f_v1_tables.py  2b604a0e182a_add_feature_column_in_product_and_image_.py  2c29e17bf5b3_.py  30d0b083ec86_change_description.py  36ca18941bdf_remove_transaction_comission_table.py  37f3a4837831_teste_compare_types.py  41a9792f4f3f_.py  41a9792f4f3f_add_release_date_in_sales_commission.py  425e147e716b_readd_tracking_number.py  46ba4b2c93ac_create_table_campaigns.py  4bc709905973_add_checked_order.py  4d24e58ec8a1_add_payment_method_table.py  4d3bd9481e60_merge_checkout_heads.py  4ed0b67518ec_update_tables_product_and_adress.py  54e9f30a86d3_generate_commissions_tables.py  (+54 more)
models/: commissions.py  franchise.py  order.py  role.py  transaction.py  uploadedimage.py  users.py
payment/: adapter.py  gateway.py  repositories.py  schema.py  service.py
schemas/: mail_schema.py  order_schema.py  payment_schema.py  user_schema.py
tests/: conftest.py  factories.py  factories_db.py  fake_functions.py  test_user.py
zipcode/: adapter.py  zip_code.py
(+185 files in other folders)
